syntax = "proto3";

package eidos.common.v1;

option go_package = "github.com/eidos-exchange/eidos/gen/common/v1;commonv1";

// 分页请求
message PaginationRequest {
    int32 page = 1;           // 页码，从 1 开始
    int32 page_size = 2;      // 每页大小，默认 20，最大 100
}

// 分页响应
message PaginationResponse {
    int32 total = 1;          // 总记录数
    int32 page = 2;           // 当前页码
    int32 page_size = 3;      // 每页大小
    int32 total_pages = 4;    // 总页数
}
